<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/settings_dialpad_divider"
        layout="@layout/divider" />

    <TextView
        android:id="@+id/settings_dialpad_section_label"
        style="@style/SettingsSectionLabelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialpad" />

    <RelativeLayout
        android:id="@+id/settings_manage_speed_dial_holder"
        style="@style/SettingsHolderTextViewOneLinerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/settings_manage_speed_dial_label"
            style="@style/SettingsTextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_speed_dial" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_hide_dialpad_numbers_holder"
        style="@style/SettingsHolderSwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.fossify.commons.views.MyMaterialSwitch
            android:id="@+id/settings_hide_dialpad_numbers"
            style="@style/SettingsSwitchStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hide_dialpad_numbers" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_dialpad_vibration_holder"
        style="@style/SettingsHolderSwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.fossify.commons.views.MyMaterialSwitch
            android:id="@+id/settings_dialpad_vibration"
            style="@style/SettingsSwitchStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialpad_vibrations" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_dialpad_beeps_holder"
        style="@style/SettingsHolderSwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.fossify.commons.views.MyMaterialSwitch
            android:id="@+id/settings_dialpad_beeps"
            style="@style/SettingsSwitchStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialpad_beeps" />

    </RelativeLayout>
</LinearLayout>
