<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/messages_placeholder_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/messages_placeholder_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/messages_tab"
        android:src="@drawable/ic_sms_vector" />

    <TextView
        android:id="@+id/messages_placeholder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/messages_tab"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/messages_placeholder_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/messages_placeholder"
        android:textSize="14sp" />

    <Button
        android:id="@+id/messages_open_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/open_messages" />

</LinearLayout>
