<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/wallet_liquidity_settings_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/wallet_liquidity_settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/wallet_liquidity_settings_title"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />
    </org.fossify.commons.views.MyAppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/wallet_liquidity_settings_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet_liquidity_section" />

            <RelativeLayout
                android:id="@+id/wallet_liquidity_mode_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/wallet_liquidity_mode_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_liquidity_mode" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/wallet_liquidity_mode_value"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wallet_liquidity_mode_label"
                    tools:text="@string/wallet_liquidity_mode_auto" />
            </RelativeLayout>

            <include layout="@layout/divider" />

            <RelativeLayout
                android:id="@+id/wallet_liquidity_provider_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/wallet_liquidity_provider_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_liquidity_provider" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/wallet_liquidity_provider_value"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wallet_liquidity_provider_label"
                    tools:text="Automatic" />
            </RelativeLayout>

            <include layout="@layout/divider" />

            <RelativeLayout
                android:id="@+id/wallet_liquidity_custom_holder"
                style="@style/SettingsHolderTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/wallet_liquidity_custom_label"
                    style="@style/SettingsTextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_liquidity_custom_provider" />

                <org.fossify.commons.views.MyTextView
                    android:id="@+id/wallet_liquidity_custom_value"
                    style="@style/SettingsTextValueStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wallet_liquidity_custom_label"
                    tools:text="@string/wallet_liquidity_custom_not_set" />
            </RelativeLayout>

            <include layout="@layout/divider" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/wallet_liquidity_provider_hint"
                style="@style/SettingsTextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_margin"
                android:paddingTop="@dimen/normal_margin"
                android:paddingEnd="@dimen/activity_margin"
                android:paddingBottom="@dimen/activity_margin"
                android:text="@string/wallet_liquidity_provider_hint"
                tools:text="@string/wallet_liquidity_provider_hint" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
