<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin"
    android:paddingBottom="@dimen/activity_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wallet_invoice_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_invoice_amount_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wallet_invoice_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_invoice_memo_hint"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <org.fossify.commons.views.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:alpha="0.75"
        android:text="@string/wallet_invoice_hint"
        android:textSize="@dimen/smaller_text_size" />

</LinearLayout>

