<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin"
    android:paddingBottom="@dimen/activity_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_wallet_address_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.fossify.commons.views.MyEditText
            android:id="@+id/contact_wallet_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_wallet_onchain_hint"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_wallet_lightning_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin">

        <org.fossify.commons.views.MyEditText
            android:id="@+id/contact_wallet_lightning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_wallet_lightning_hint"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <org.fossify.commons.views.MyTextView
        android:id="@+id/contact_wallet_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:alpha="0.7"
        android:text="@string/wallet_send_hint"
        android:textSize="@dimen/smaller_text_size" />

</LinearLayout>
