<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin"
    android:paddingBottom="@dimen/activity_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wallet_send_destination_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/ic_person_vector"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wallet_send_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_send_destination_hint"
            android:inputType="textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wallet_send_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_send_amount_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <org.fossify.commons.views.MyTextView
        android:id="@+id/wallet_send_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:alpha="0.75"
        android:text="@string/wallet_send_hint"
        android:textSize="@dimen/smaller_text_size" />

</LinearLayout>
